# sk-pqc-py

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PUBLISHING.md  README.md  SECURITY.md  SOP.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
docs/: ARCHITECTURE.md
docs/api/: index.html  search.js  sk_pqc.html
docs/api/sk_pqc/: anon_queue.html  crypto_suites.html  dm_ratchet.html  group_ratchet.html  pqdm.html  pqkem.html  pqroute.html
examples/: bench.py  dm_ratchet_roundtrip.py  hybrid_kem_roundtrip.py
scripts/: build-api-docs.sh
src/sk_pqc/: __init__.py  anon_queue.py  dm_ratchet.py  group_ratchet.py  pqroute.py
tests/: conftest.py  test_anon_queue.py  test_crypto_suites.py  test_dm_ratchet.py  test_group_ratchet.py  test_pqdm.py  test_pqkem.py  test_pqroute.py  test_properties.py
